<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="loginModel"
            type="com.dimaoprog.chat.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_left_right_login_page"
            android:paddingTop="@dimen/margin_left_right_login_page"
            android:paddingEnd="@dimen/margin_left_right_login_page"
            tools:context=".loginRegistrationViews.LoginFragment">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:textColorHint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_e_mail"
                    style="@style/LoginInput"
                    android:autofillHints="@string/e_mail"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:text="@={loginModel.email}"
                    tools:targetApi="o" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/LoginInput"
                    android:autofillHints="@string/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={loginModel.password}"
                    tools:targetApi="o" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/check_stay_in"
                style="@android:style/Widget.Material.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/remember_me" />

            <Button
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                android:onClick="@{() -> loginModel.signIn()}"
                android:text="@string/sign_in" />

            <Button
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{loginModel.needVerification}"
                android:onClick="@{() -> loginModel.checkVerification()}"
                android:text="@string/check_e_mail_verification" />

        </LinearLayout>
    </ScrollView>
</layout>