<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.dimaoprog.chat.Converter" />

        <variable
            name="message"
            type="com.dimaoprog.chat.entity.Message" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_s">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/margin_message"
            android:background="@drawable/shape_message"
            android:gravity="end"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_m"
            android:paddingTop="@dimen/padding_xs"
            android:paddingEnd="@dimen/padding_m"
            android:paddingBottom="@dimen/padding_xs">

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@{message.author}"
                android:textColor="@color/textOut"
                android:textSize="10sp"
                tools:text="@string/user_name" />

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{message.message}"
                android:textColor="@color/textOut"
                android:textSize="18sp"
                tools:text="@string/text_message" />

            <TextView
                android:id="@+id/txt_message_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{Converter.dateToStringForMessages(message.time_stamp)}"
                android:textColor="@color/textOut"
                android:textSize="8sp"
                tools:text="@string/time" />

        </LinearLayout>
    </FrameLayout>
</layout>