<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.dimaoprog.chat.Converter" />

        <variable
            name="message"
            type="com.dimaoprog.chat.entity.Message" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_s">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_message"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/margin_message"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_xs"
            android:paddingBottom="@dimen/padding_xs"
            android:paddingStart="@dimen/padding_m"
            android:paddingEnd="@dimen/padding_m">

            <TextView
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@{message.message}"
                android:textSize="18sp"
                tools:text="@string/text_message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_message_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_m"
                    android:text="@{Converter.dateToString(message.time_stamp)}"
                    android:textSize="8sp"
                    tools:text="@string/time" />

                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@{message.author}"
                    android:textSize="10sp"
                    tools:text="@string/user_name" />

            </LinearLayout>


        </LinearLayout>
    </FrameLayout>
</layout>